--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 REACT_APP_CRYPTONEWSAPI=37873cb7336a6d9690eb1498c8268493
-DATABASE_URL='https://jccn.herokuapp.com/'
+DATABASE_URL="https://jccn.herokuapp.com/"
