--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.0",
     "pg": "^7.15.0",
