--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
     "db:init": "dropdb --if-exists crypto_db && createdb crypto_db",
     "db:reset": "node ./scripts/resetDb.js",
-    "db:seed": "node ./scripts/seedDb.js"
+    "db:seed": "node ./scripts/seedDb.js",
+    "heroku-postbuild": "cd client/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+  "client": "cd client && npm start",
+  "dev": "concurrently --kill-others-on-fail \"npm run start\" \"npm run client\""
   },
   "author": "",
   "devDependencies": {
