--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "db:reset": "node ./scripts/resetDb.js",
     "db:seed": "node ./scripts/seedDb.js",
     "heroku-postbuild": "cd client/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
-  "client": "cd client && npm start",
-  "dev": "concurrently --kill-others-on-fail \"npm run start\" \"npm run client\""
+    "client": "cd client && npm start",
+    "dev": "concurrently --kill-others-on-fail \"npm run start\" \"npm run client\""
   },
   "author": "",
   "devDependencies": {
@@ -21,6 +21,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "d3": "^6.5.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
@@ -28,6 +29,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.12.1",
+    "react-string-replace": "^0.4.4",
     "sequelize": "^5.19.5"
   }
 }
