--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.4.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.6.0",
+    "browserslist": "^4.16.3",
+    "caniuse-lite": "^1.0.30001198",
     "cors": "^2.8.5",
-    "d3": "^6.5.0",
+    "d3": "^6.6.0",
     "dotenv": "^8.2.0",
-    "node-sass": "^4.13.0",
-    "pg": "^7.15.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
+    "node-sass": "^4.14.1",
+    "pg": "^7.18.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
-    "reactstrap": "^8.2.0"
+    "reactstrap": "^8.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
